prowlarr/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prowlarr
  annotations:
    reloader.stakater.com/auto: 'true'
    secret.reloader.stakater.com/reload: iscsi-chap-secret

spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: sonarr
        image: linuxserver/prowlarr:develop
        ports:
        - containerPort: 9696
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        iscsi:
          targetPortal: 172.19.74.139
          iqn: iqn.2000-01.com.synology:fs2.prowlarr-config.05f22bcf4f5
          lun: 1
          fsType: ext4
          chapAuthDiscovery: false
          chapAuthSession: true
          secretRef:
            name: iscsi-chap-secret
