prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  ports:
  - port: 9696
    targetPort: 9696
    protocol: TCP
    name: http
  selector:
    app: prowlarr
