prowlarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/description: Indexer Manager
    gethomepage.dev/group: Media Tools
    gethomepage.dev/icon: prowlarr.png
spec:
  tls:
  - hosts:
    - prowlarr.k.oneill.net
    secretName: prowlarr-tls
  rules:
  - host: prowlarr.k.oneill.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 9696
  ingressClassName: nginx
